--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,10 +1,12 @@
 .containerHeader {
     margin: 20px auto;
     text-align: center;
-    width: 800px;
+    max-width: 800px;
+    width: auto;
     
     section{
-        width: 100%;
+        max-width: 800px;
+        width: auto;
         display: flex;
         justify-content: space-between;
 
